Changelog - QOL changes. Better font visibility on card pages - Booster Pack graphics added with animation intro - Counters for card selection in Deck Building - Made NavBar fixed to page - Overall Polish to pages, No known errors on current build

--- a/client/css/menuView.css
+++ b/client/css/menuView.css
@@ -11,21 +11,79 @@
   align-self: center;
 }
 
+.boosterImgDisplay {
+  align-self: center;
+  display: inline;
+  position: absolute;
+  width: 100vw;
+  max-width: 100vh;
+  position: fixed;
+  opacity: 50%;
+  top:0px;
+  z-index: -1;
+  animation: fadeOut 3s;
+  justify-self: center;
+}
+
+.boosterContainer {
+  top:0px;
+  left:0px;
+  width:100vh;
+
+}
+
 .cardImgDisplay:hover {
   opacity:.5;
 }
 
 
 .typeH { 
-  font-size: 40px;
+  font-size: 36px;
+  text-shadow: 2px 2px 25px  #000, -2px -2px 25px  #000, 2px -2px 25px  #000, -2px 2px 25px  #000;
+}
+.pageH {
+  font-size: 56px;
+  text-align: center;
+  text-shadow: 2px 2px 25px  #000, -2px -2px 25px  #000, 2px -2px 25px  #000, -2px 2px 25px  #000;
 }
 
 .topColItems {
   text-align: center;
-  height: 150px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  font-size: 16px;
+  text-shadow: 2px 2px 25px  #000, -2px -2px 25px  #000, 2px -2px 25px  #000, -2px 2px 25px  #000;
+}
+
+.percentDrops{
+  text-shadow: 2px 2px 25px  #000, -2px -2px 25px  #000, 2px -2px 25px  #000, -2px 2px 25px  #000;
+  font-size: 16px;
 }
 
 .itemTitle {
-  text-align: right
+  text-align: right;
+
 }
 
+
+@keyframes fadeOut { 
+  0%, 
+  0% { 
+      opacity: 1;
+      z-index: 10; 
+  } 
+  50%{
+    opacity: 1
+  }
+  80%{
+    opacity: .5;
+    z-index: -1;
+  }
+
+}
+
+@media only screen and (max-width: 1000px){
+  .boosterImgDisplay {
+left: 0px
+  }
+}
